--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "tptemoinko-sass",
   "version": "1.0.0",
-  "description": "",
+  "description": "sitio web que brinda herramientas financieras para pymes",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-css": "node-sass --include-path scss scss/main.scss css/style.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
-  "author": "",
+  "author": "martin temoinko",
   "license": "ISC",
   "dependencies": {
     "node-sass": "^7.0.1",
